--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@ fabric_api_version=0.90.7+1.20.2
 
 fabric_version=0.14.24
 
-group=xyz.wagyourtail
+maven_group=xyz.wagyourtail
 archives_base_name=uniconfig
 
 version=1.0.0
