--- a/gradle.properties
+++ b/gradle.properties
@@ -1,12 +1,13 @@
-org.gradle.jvmargs=-Xmx4G
+org.gradle.jvmargs=-Xmx2048M
 
-minecraft_version=1.20.2
-forge_version=47-beta
-fabric_api_version=0.90.7+1.20.2
+minecraft_version=1.20.6
+enabled_platforms=fabric,neoforge
 
-fabric_version=0.14.24
-
+archives_base_name=UniConfig
+mod_version=1.0.0
 maven_group=xyz.wagyourtail
-archives_base_name=uniconfig
 
-version=1.0.0
+fabric_loader_version=0.15.11
+fabric_api_version=0.97.8+1.20.6
+
+neoforge_version=22-beta
